# easyOpenGL

./: README.md
book-chapter-02/: CMakeLists.txt  Chapter02.cpp  Chapter02.h  main.cpp
book-chapter-02/shaders/: chapter02.frag  chapter02.vert
cubeDemo/: CMakeLists.txt  CubeDemo.cpp  CubeDemo.h  main.cpp
easyOpenGL/: CMakeLists.txt
easyOpenGL/Debug/: CMakeCache.txt  Makefile  cmake_install.cmake
easyOpenGL/include/: ColorHelper.h  EasyOpenGL.h  Game.h  GameComponent.h  GameException.h  ShaderBuilder.h  Utility.h  VertexDeclarations.h
easyOpenGL/src/: ColorHelper.cpp  Game.cpp  GameComponent.cpp  GameException.cpp  ShaderBuilder.cpp  Utility.cpp
example2d/: CMakeLists.txt  Square.cpp  Square.h  main.cpp
example2d/shaders/: square.vert
fourTriangle/: CMakeLists.txt  FourTriangle.cpp  FourTriangle.h  main.cpp
fourTriangle/shaders/: fourTriangle.frag
pointDemo/: CMakeLists.txt  PointDemo.cpp  PointDemo.h  main.cpp
pointDemo/buildXcode/: CMakeCache.txt  cmake_install.cmake
pointDemo/buildXcode/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo
pointDemo/buildXcode/pointDemo.build/Debug/ALL_BUILD.build/: Script-C7194083D12B47CDB6BE3650.sh  dgph
pointDemo/buildXcode/pointDemo.build/Debug/ZERO_CHECK.build/: Script-930734CF8E5D454781CA7958.sh  dgph
pointDemo/buildXcode/pointDemo.build/Debug/pointDemo.build/: dgph
pointDemo/buildXcode/pointDemo.build/Debug/pointDemo.build/Objects-normal/x86_64/: PointDemo.d  main.d  pointDemo.LinkFileList
pointDemo/buildXcode/pointDemo.xcodeproj/: project.pbxproj
pointDemo/buildXcode/pointDemo.xcodeproj/project.xcworkspace/xcuserdata/mloayza.xcuserdatad/: UserInterfaceState.xcuserstate
pointDemo/buildXcode/pointDemo.xcodeproj/xcuserdata/mloayza.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  pointDemo.xcscheme  xcschememanagement.plist
triangleDemo/: CMakeLists.txt  ColoredTriangleDemo.cpp  ColoredTriangleDemo.h  main.cpp  readme.md
